# re-ocr-resource

./: README.md  create_class.ipynb  pyproject.toml
errors/: error_1.txt
public_domain_info/: Create_public_domain_info_csv.ipynb  get_public_domain_info_from_api.ipynb  re_ocr_public_domain.csv
re_ocr_resource/: book.py  config.py  py.typed
